--- a/client/src/components/css/choosebook.css
+++ b/client/src/components/css/choosebook.css
@@ -38,9 +38,13 @@
     align-items: center;
 }
 
+
 .cbc-search-bar input{
     border-radius: 5px;
+    border:none;
     width: 100%;
+    margin-left: 5px;
+
 }
 .cbc-search-bar span{
     min-width: 62px;
