--- a/client/src/components/css/bookslist.css
+++ b/client/src/components/css/bookslist.css
@@ -45,13 +45,5 @@
 
 
 .bl-table{
-    display: table;
-    border-collapse: separate;
-    box-sizing: border-box;
-    text-indent: initial;
-    border-spacing: 2px;
-    border-color: grey;
-    width: 100%;
-    margin-bottom: 1rem;
-    color: #212529;
+    margin: 0px;;
 }
