--- a/client/src/components/css/reviewlist.css
+++ b/client/src/components/css/reviewlist.css
@@ -2,7 +2,7 @@
     display:block;
     background-color: #FFFFFF;
     width: 100%;
-    height: 100%;
+    height: 97.8%;
     padding: 1em;
     gap: 1em;
     position: relative;
@@ -23,7 +23,7 @@
 .rlc-book {
     width: 100%;
     height: 20vh;
-    background-color: var(--background);
+    background-color: inherit;
     display: grid; 
     grid-template-columns: 20vh 1fr 1fr 1fr 1fr; 
     grid-template-rows: repeat(5, 1fr); 
