--- a/client/src/components/css/accordion.css
+++ b/client/src/components/css/accordion.css
@@ -7,7 +7,7 @@
 }
 
 .accordion {
-  background-color: inherit;
+  background-color: lightgrey;
   color: #444;
   cursor: pointer;
   padding: 5px;
@@ -15,8 +15,7 @@
   align-items: center;
   outline: none;
   transition: background-color 0.3s ease;
-  border: none;
-}
+  border: 1px solid black;}
 
 .accordion__title {
   font-size: 14px;
