implemented review status instead of booleans
1 = DENIED , 2 = PENDING , 3 = ACCEPTED , 4 = PUBLISHED

--- a/client/src/components/css/archive.css
+++ b/client/src/components/css/archive.css
@@ -55,15 +55,19 @@
 
 .arc-review-container :hover {}
 
-.published {
+.status-4 {
     color: rgb(24, 64, 138);
 }
 
-.accepted {
+.status-3 {
     color: rgb(29, 122, 53);
 }
 
-.not-accepted {
+.status-2 {
+    color: rgb(87, 87, 87);
+}
+
+.status-1 {
     color: rgb(128, 27, 27);
 }
 
