--- a/client/src/components/css/accordion.css
+++ b/client/src/components/css/accordion.css
@@ -7,7 +7,7 @@
 }
 
 .accordion {
-  background-color: inherit;
+  background-color: lightgrey;
   color: #444;
   cursor: pointer;
   padding: 5px;
