--- a/client/src/components/css/reviewlist.css
+++ b/client/src/components/css/reviewlist.css
@@ -9,7 +9,7 @@
 }
 
 .rlc-search-result {
-    background-color: var(--background);
+    background-color: #ffffff;
     overflow-y: scroll;
     height: 78vh;
     overflow-x: hidden;
@@ -38,8 +38,12 @@
 
 .rlc-bonusfield {
     position: absolute;
-    right: 10%;
+    right: 1%;
     bottom: 4%;
+}
+
+.rlc-field {
+    width: 80px;
 }
 
 .rlc-mul { grid-area: 2 / 1 / 4 / 2; justify-self: center;}
