--- a/client/src/components/css/reviewlist.css
+++ b/client/src/components/css/reviewlist.css
@@ -20,12 +20,24 @@
     align-items: center;
 }
 
+.rlc-search-result-mobile {
+    background-color: #ffffff;
+    overflow-y: scroll;
+    height: 65vh;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    min-width: 100px;
+    padding: 5px 5px 0px 5px;
+    align-items: center;
+}
+
 .rlc-book {
     width: 100%;
     height: 20vh;
     background-color: inherit;
     display: grid; 
-    grid-template-columns: 20vh 1fr 1fr 1fr 1fr; 
+    grid-template-columns: 10vh 1fr 1fr 1fr 1fr; 
     grid-template-rows: repeat(5, 1fr); 
     grid-column-gap: 0px;
     grid-row-gap: 0px; 
@@ -37,7 +49,6 @@
 }
 
 .rlc-bonusfield {
-    position: absolute;
     right: 1%;
     bottom: 4%;
 }
